--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <title></title>
+    <title>Maryna Martynenko Personal Page</title>
     <meta charset="utf-8" />
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -17,71 +17,95 @@
 
     <div id="mainWin" class="container">
         <div class="row">
-            <div class="col-md-4 col-lg-3">
+            <div class="col-sm-3 col-md-3 col-lg-3">
                 <div class="bootstrap-vertical-nav">
-                    <button class="btn btn-primary hidden-md-up" type="button" data-toggle="collapse" data-target="#collapse" aria-expanded="false" aria-controls="collapseExample">
-                        <span class="">Menu</span>
+                    <button id="menuButton" class="btn btn-primary hidden-md-up" type="button" data-toggle="collapse" data-target="#collapse" aria-expanded="false" aria-controls="collapse">
+                        <span class="bar"><i class="fa fa-bars" aria-hidden="true"></i></span>
                     </button>
 
                     <div class="collapse" id="collapse">
                         <ul class="nav flex-column" id="exCollapsingNavbar3">
-                            <li class="nav-item">
-                                <a class="nav-link active" href="#">Active</a>
+                            <li id="aM" class="nav-item">
+                                <a class="nav-link active" href="">About me</a>
                             </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">Link</a>
+                            <li id="pR" class="nav-item">
+                                <a class="nav-link" href="">Projects</a>
                             </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">Link</a>
+                            <li id="last" class="nav-item">
+                                <a class="nav-link" href="#">Contacts</a>
                             </li>
-                            <li class="nav-item">
-                                <a class="nav-link disabled" href="#">Disabled</a>
-                            </li>
+
                         </ul>
                     </div>
 
                 </div>
 
             </div>
-            <div class="col-md-8 col-lg-9">
+            <div class="col-sm-9 col-md-9 col-lg-9">
                 <h1>Welcome to my personal page!</h1>
 
                 <hr />
+                <section id="aboutMe">
+                    <div class="jumbotron">
 
-                <div class="jumbotron">
+                        <div class="row">
+                            <div class="col-xs-6 col-sm-7 col-md-8">
 
-                    <div class="row">
-                        <div class="col-md-8">
-                            <p>I am Marina Martynenko and I work as web developer.
-                            <p  class="text-center"><a href="https://www.linkedin.com/in/maryna-martynenko-4580b4b4/" target="_blank">My resume can be found here</a>.</p>
-                            
-                            <div class="text-center">
-                                <a onclick="" target='_blank' href="https://www.facebook.com/marina.martynenko.7" class="btn btn-social-icon btn-lg btn-facebook"><i class="fa fa-facebook"></i></a>
-                                <a onclick="" target='_blank' href="https://twitter.com/zombi_housewife" class="btn btn-social-icon btn-lg btn-twitter"><i class="fa fa-twitter"></i></a>
-                                <a onclick="" target='_blank' href="https://github.com/alivemary" class="btn btn-social-icon btn-lg btn-github"><i class="fa fa-github"></i></a>
+                                <div class="row">
+                                    <div class="col-xs-12 col-sm-12 col-md-6">
+                                        <p class="text-center">Maryna Martynenko</p>
+                                        <p class="text-center">Web developer</p>
+                                        <p class="text-center">Tecnologies</p>
+                                        <ul>
+                                            <li>HTML, CSS, Bootstrap</li>
+                                            <li>JavaScript, jQuery</li>
+                                            <li>PHP, MYSQL</li>
+                                        </ul>
 
+
+                                    </div>
+                                    <div class="col-xs-12 col-sm-12 col-md-6">
+
+                                        <p class="text-center"><a href="https://www.linkedin.com/in/maryna-martynenko-4580b4b4/" target="_blank">My resume</a></p>
+
+                                        <div class="text-center">
+                                            <p>Follow me on my social pages:</p>
+                                            <a onclick="" target='_blank' href="https://www.facebook.com/marina.martynenko.7" class="btn btn-social-icon btn-lg btn-facebook"><i class="fa fa-facebook"></i></a>
+                                            <a onclick="" target='_blank' href="https://twitter.com/zombi_housewife" class="btn btn-social-icon btn-lg btn-twitter"><i class="fa fa-twitter"></i></a>
+                                            <a onclick="" target='_blank' href="https://github.com/alivemary" class="btn btn-social-icon btn-lg btn-github"><i class="fa fa-github"></i></a>
+
+                                        </div>
+                                    </div>
+
+                                </div>
+                            </div>
+                            <div class="col-xs-6 col-sm-5 col-md-4">
+                                <img id="portret" class="img-circle" src="img/me.jpg" alt="me">
                             </div>
                         </div>
-                        <div class="col-md-4">
-                            <img id="portret" class="img-circle" src="img/me.jpg" alt="me">
+                    </div>
+                    <hr />
+                </section>
+                
+                <section id="projects hidden">
+                    <h3 class="text-center">Projects</h3>
+                    <div class="row">
+                        <div class="col-xs-12 col-sm-6 col-md-4">
+                            <a href="#">
+                                <img src="img/simongame.jpg" /></a>
+                        </div>
+                        <div class="col-xs-12 col-sm-6 col-md-4">
+                            <a href="#">
+                                <img src="img/tictactoe.jpg" />
+                            </a>
+                        </div>
+                        <div class="col-xs-12 col-sm-6 col-md-4">
+                            <a href="#">
+                                <img src="img/pomodoro.jpg" />
+                            </a>
                         </div>
                     </div>
-                </div>
-
-                <hr />
-
-                <p>
-                    I enjoy this job so much.
-                </p>
-                </p>
-                <p>
-                    The technologies involved are always changing, it means you learn lots, it keeps my brain from getting bored.
-                    It is enjoyable to see a problem, logically come up with a solution, and put it into practice. There is almost no limit to creativity.
-                </p>
-                <p>
-                    It’s a great satisfaction of going from sketches or mockups to the final product, always trying to do more and more in terms of quality,
-                    creativity and functionality.
-                </p>
+                </section>
             </div>
         </div>
     </div>
