--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
                     <div class="collapse" id="collapse">
                         <ul class="nav flex-column" id="exCollapsingNavbar3">
                             <li id="aM" class="nav-item">
-                                <a class="nav-link active" href="">About me</a>
+                                <a class="nav-link active" href="#">About me</a>
                             </li>
                             <li id="pR" class="nav-item">
-                                <a class="nav-link" href="">Projects</a>
+                                <a class="nav-link" href="#">Projects</a>
                             </li>
                             <li id="last" class="nav-item">
                                 <a class="nav-link" href="#">Contacts</a>
